tests/agl/rejections/parse/else_not_last.agl
let k = 1
if k = 1 => pass
| else => pass
| k = 2 => pass
